iterated over each blog in app.js and display dinamic content in blogs page using ejs

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Blog Kitchen | <%= title %></title>
 </head>
 <body>
-    <h1>OOps, page not found</h1>
+    <nav>
+        <div class="site-title">
+            <a href="/"><h1>Blog Kitchen</h1></a>
+            <p>This is your favourite blog to share your recipes of the most amazing dishes!</p>
+        </div>
+        <ul>
+            <li>
+                <a href="/">Blogs</a>
+                <a href="/about">About</a>
+                <a href="/blogs/create">New Blog</a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="not-found content">
+        <h2>OOPS, page not found</h2>
+
+    </div>
 </body>
 </html>
