--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,25 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Blog Kitchen | <%= title %></title>
+    <%- include('./partials/head.ejs') %>
 </head>
 <body>
-    <nav>
-        <div class="site-title">
-            <a href="/"><h1>Blog Kitchen</h1></a>
-            <p>This is your favourite blog to share your recipes of the most amazing dishes!</p>
-        </div>
-        <ul>
-            <li>
-                <a href="/">Blogs</a>
-                <a href="/about">About</a>
-                <a href="/blogs/create">New Blog</a>
-            </li>
-        </ul>
-    </nav>
+    <%- include('./partials/nav.ejs') %>
 
     <div class="about content">
         <h2>About us</h2>
@@ -27,5 +12,6 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis deserunt repellendus porro minus, et, assumenda veritatis earum iusto sapiente rem doloribus totam magni tempora cumque mollitia unde libero modi. Temporibus?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, autem veniam, repellendus sed quaerat eos, dolore quisquam provident eaque earum atque ab! Molestias nemo cumque minus omnis voluptate suscipit excepturi.</p>
     </div>
+    <%- include('./partials/footer.ejs') %>
 </body>
 </html>
