--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,25 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Blog Kitchen | <%= title %></title>
+    <%- include('./partials/head.ejs') %>
 </head>
 <body>
-    <nav>
-        <div class="site-title">
-            <a href="/"><h1>Blog Kitchen</h1></a>
-            <p>This is your favourite blog to share your recipes of the most amazing dishes!</p>
-        </div>
-        <ul>
-            <li>
-                <a href="/">Blogs</a>
-                <a href="/about">About</a>
-                <a href="/blogs/create">New Blog</a>
-            </li>
-        </ul>
-    </nav>
+    <%- include('./partials/nav.ejs') %>
 
     <div class="create-blog content">
         <form action="">
@@ -33,5 +18,6 @@
         </form>
 
     </div>
+    <%- include('./partials/footer.ejs') %>
 </body>
 </html>
