--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
     <%- include('./partials/head.ejs') %>
-</head>
 <body>
     <%- include('./partials/nav.ejs') %>
 
     <div class="create-blog content">
-        <form action="">
+        <form action="/blogs" method="POST">
             <label for="title">Blog Title:</label>
-            <input type="text" name="" id="title" required>
+            <input type="text" name="title" id="title" required>
             <label for="snippet">Blog Snippet:</label>
-            <input type="text" name="" id="snipped" required>
+            <input type="text" name="snippet" id="snipped" required>
             <label for="body">Blog Body:</label>
-            <textarea name="" id="body" cols="30" rows="10" required></textarea>
+            <textarea name="body" id="body" cols="30" rows="10" required></textarea>
             <button type="submit">Submit</button>
         </form>
 
