--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-   <%- include('./partials/head.ejs') %>
+<%- include('./partials/head.ejs') %>
+
 <body>
     <%- include('./partials/nav.ejs') %>
     <p>This is your favourite blog to share your recipes of the most amazing dishes!</p>
@@ -8,15 +9,21 @@
         <h2>All Blogs</h2>
 
         <% if (blogs.length > 0) { %>
-            <% blogs.forEach(blog => { %>
-                <h3 class="title"><%= blog.title %></h3>
-                <p class="snippet"><%= blog.snippet %></p>
-
-           <% }) %>
-    <% } else { %>
+        <% blogs.forEach(blog => { %>
+        <a class="single" href="/blogs/<%= blog._id %>">
+            <h3 class="title">
+                <%= blog.title %>
+            </h3>
+            <p class="snippet">
+                <%= blog.snippet %>
+            </p>
+        </a>
+        <% }) %>
+        <% } else { %>
         <p>There are no blogs to display...</p>
-   <% } %>
+        <% } %>
     </div>
     <%- include('./partials/footer.ejs') %>
 </body>
+
 </html>
