--- a/public/styles.css
+++ b/public/styles.css
@@ -75,6 +75,18 @@ nav a  {
     text-decoration: underline;
 }
 
+/* About us  */
+
+.about h2 {
+    padding: 30px 0 20px 30px;
+    font-size: 40px;
+}
+
+.about p {
+    padding-left: 20px;
+    line-height: 2em;
+}
+
 
 
 
