--- a/views/create.ejs
+++ b/views/create.ejs
@@ -11,7 +11,7 @@
             <label for="snippet">Blog Snippet:</label>
             <input type="text" name="snippet" id="snipped" required>
             <label for="body">Blog Body:</label>
-            <textarea name="body" id="body" cols="30" rows="10" required></textarea>
+            <textarea name="body" id="body" required></textarea>
             <button type="submit">Submit</button>
         </form>
 
