--- a/public/styles.css
+++ b/public/styles.css
@@ -59,6 +59,7 @@ nav a  {
 
 .blogs {
     padding: 10px 20px;
+   
 }
 
 .blogs h2 {
@@ -95,7 +96,6 @@ nav a  {
 /* New Blog */
 
 .create-blog {
-    border: 2px solid blue;
     height: 80%;
     width: 100%;
     display: flex;
@@ -131,6 +131,47 @@ button {
     margin-top: 25px;
     cursor: pointer;
 }
+
+/* Footer */
+
+footer {
+    display: flex;
+    justify-content: center;
+    padding-top: 40px; 
+}
+
+/* Blog Content */
+
+.details h2 {
+    font-size: 40px;
+    padding: 30px 0 30px 20px;
+}
+
+.details p {
+    font-size: 20px;
+    padding: 0 20px 0 20px;
+    line-height: 2em;
+}
+
+/* Details and Delete */
+
+.details {
+    position: relative;
+}
+
+.delete {
+    position: absolute;
+    background-color: #f52828;
+    top: 40px;
+    right: 20px;
+    padding: 20px;
+    border-radius: 10%;
+    font-weight: bold;
+    color: whitesmoke;
+    cursor: pointer;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+}
+
 
 
 
